--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -52,10 +52,7 @@ jobs:
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/mewatchsg.m3u8
           wget 'https://www.stream-link.org/stream-link.m3u' \
           --header='Upgrade-Insecure-Requests: 1' \
-          --header='User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36' \
-          --header='sec-ch-ua: "Not/A)Brand";v="8", "Chromium";v="126", "Google Chrome";v="126"' \
-          --header='sec-ch-ua-mobile: ?0' \
-          --header='sec-ch-ua-platform: "Windows"' \
+          --header='User-Agent: okhttp/3.2.0' \
           -O ./m3u/stream-link.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/stream-link.m3u
 
