--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -36,7 +36,8 @@ jobs:
           wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
           wget -O ./m3u/MuZu.html https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html || true
           wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
-          wget -O ./m3u/52top/itv_proxy.m3u http://xg.52sw.top:5000/itv_proxy.m3u || true
+          
+          wget -O ./m3u/fanmingming.m3u https://live.fanmingming.com/tv/m3u/ipv6.m3u || true
 
       - name: Download Live Sources
         run: |
@@ -45,8 +46,8 @@ jobs:
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/Kiki.m3u         
           wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u                    
-          wget -O ./m3u/fanmingming.m3u https://live.fanmingming.com/tv/m3u/ipv6.m3u || true
-          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/fanmingming.m3u          
+          wget -O ./m3u/52top/itv_proxy.m3u http://xg.52sw.top:5000/itv_proxy.m3u || true
+          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/itv_proxy.m3u          
           wget -O ./m3u/52top/mytvsuper.m3u http://xg.52sw.top:5000/mytvsuper.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/mytvsuper.m3u
           wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
@@ -94,7 +95,7 @@ jobs:
       - name: Integrate Master Playlist
         run: |
           rm -f Master.m3u && touch Master.m3u
-          cat ./m3u/Kiki.m3u ./Olympic.m3u ./m3u/fanmingming.m3u ./m3u/52top/4gtv.m3u ./m3u/52top/mytvsuper.m3u >> Master.m3u
+          cat ./m3u/Kiki.m3u ./Olympic.m3u ./m3u/mewatchsg.m3u8 ./m3u/52top/itv_proxy.m3u ./m3u/52top/4gtv.m3u ./m3u/52top/mytvsuper.m3u >> Master.m3u
           sed -i '1i #EXTM3U\n#EXTM3U x-tvg-url="https://raw.githubusercontent.com/Tina-062006/java/main/EPG/EPG.xml"' Master.m3u
 
       - name: Commit and Push Changes
