--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -29,7 +29,6 @@ jobs:
           }
 
           download_with_retries https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv ./m3u/aseanic.m3u || true
-          download_with_retries https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv ./m3u/aseanic.m3u || true
           download_with_retries https://raw.githubusercontent.com/mystery75/streaming/app/tivimate ./m3u/mystery75.m3u || true
           download_with_retries https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u ./m3u/electriqube.m3u || true
           download_with_retries https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u ./m3u/xiaotan8.m3u || true
@@ -50,41 +49,32 @@ jobs:
 
       - name: Download Live Sources
         run: |
-
-          wget -O ./m3u/Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki || true
+          download_with_retries https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki ./m3u/Kiki.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/Kiki.m3u         
-          wget -O ./m3u/52top/4gtv.m3u http://xg.52sw.top:5000/4gtv.m3u || true
+          download_with_retries http://xg.52sw.top:5000/4gtv.m3u ./m3u/52top/4gtv.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u                    
-          wget -O ./m3u/52top/itv_proxy.m3u http://xg.52sw.top:5000/itv_proxy.m3u || true
+          download_with_retries http://xg.52sw.top:5000/itv_proxy.m3u ./m3u/52top/itv_proxy.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/itv_proxy.m3u          
-          wget -O ./m3u/52top/mytvsuper.m3u http://xg.52sw.top:5000/mytvsuper.m3u || true
+          download_with_retries http://xg.52sw.top:5000/mytvsuper.m3u ./m3u/52top/mytvsuper.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/mytvsuper.m3u
-          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
+          download_with_retries https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 ./m3u/mewatchsg.m3u8 || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/mewatchsg.m3u8
                    
           # tw
-          wget -O ./m3u/tw.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u || true
+          download_with_retries https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u ./m3u/tw.m3u || true
           sed -i 's/#EXTINF:-1/#EXTINF:-1 group-title="TW"/g; /^\s*$/d' ./m3u/tw.m3u
 
           # cn
-          wget -O ./m3u/cqyx.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u || true
-          wget -O ./m3u/sxg.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u || true
+          download_with_retries https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u ./m3u/cqyx.m3u || true
+          download_with_retries https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u ./m3u/sxg.m3u || true
           sed -i '/#EXTM3U/d' ./m3u/cqyx.m3u ./m3u/sxg.m3u 
-          # cat ./m3u/cqyx.m3u ./m3u/sxg.m3u | tee ./m3u/iptv-org.m3u >/dev/null
-          # sed -i '/^\s*$/d' ./m3u/iptv-org.m3u
 
       - name: Download Program Guide
         run: |
-          wget -O ./EPG/My.xml https://cutt.ly/FreeviewMY-EPG-1 || true
-          wget -O ./EPG/Astro.xml https://cutt.ly/FreeviewMY-EPG-2 || true
-          wget -O ./EPG/SG.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml || true
-          wget 'https://assets.livednow.com/epg.xml' \
-          --header='Upgrade-Insecure-Requests: 1' \
-          --header='User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36' \
-          --header='sec-ch-ua: "Not/A)Brand";v="8", "Chromium";v="126", "Google Chrome";v="126"' \
-          --header='sec-ch-ua-mobile: ?0' \
-          --header='sec-ch-ua-platform: "Windows"' \
-          -O ./EPG/CHN.xml || true
+          download_with_retries https://cutt.ly/FreeviewMY-EPG-1 ./EPG/My.xml || true
+          download_with_retries https://cutt.ly/FreeviewMY-EPG-2 ./EPG/Astro.xml || true
+          download_with_retries https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml ./EPG/SG.xml || true
+          download_with_retries https://assets.livednow.com/epg.xml ./EPG/CHN.xml || true
           echo "EPG Auto Update in ${{ steps.date.outputs.date }}" > README.md
 
       - name: Setup Python Environment
