--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -19,71 +19,63 @@ jobs:
 
       - name: Download IPTV Sources
         run: |
-          download_or_skip() {
-            local url=$1
-            local output=$2
-            for i in {1..1}; do
-              wget -T 10 -O "$output" "$url" && break || echo "$i Skipping $url due to download failure"
-              sleep 1
-            done
-          }
-
-          download_or_skip https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv ./m3u/aseanic.m3u || true
-          download_or_skip https://raw.githubusercontent.com/mystery75/streaming/app/tivimate ./m3u/mystery75.m3u || true
-          download_or_skip https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u ./m3u/electriqube.m3u || true
-          download_or_skip https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u ./m3u/xiaotan8.m3u || true
-          download_or_skip https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt ./m3u/letalp3p.txt || true
-          download_or_skip https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt ./m3u/letalbestv.txt || true
-          download_or_skip https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt ./m3u/letallthewind.txt || true
-          download_or_skip https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt ./m3u/letalqttv.txt || true
-          download_or_skip https://raw.githubusercontent.com/letallthewind/live/main/smart.txt ./m3u/letalsmart.txt || true
-          download_or_skip https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt ./m3u/letalubtv.txt || true
-          download_or_skip http://xg.52sw.top:5000/ysp.m3u ./m3u/52top/52topysp.m3u || true
-          download_or_skip http://xg.52sw.top:5000/beesport.m3u ./m3u/52top/52topbeesport.m3u || true
-          download_or_skip http://xg.52sw.top:5000/tptv_proxy.m3u ./m3u/52top/52toptptv_proxy.m3u || true
-          download_or_skip http://xg.52sw.top:5000/sxg.m3u ./m3u/52top/52topsxg.m3u || true
-          download_or_skip https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 ./m3u/my.m3u || true
-          download_or_skip https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html ./m3u/MuZu.html || true
-          download_or_skip https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 ./m3u/FreeviewMY.m3u8 || true
-          download_or_skip https://live.fanmingming.com/tv/m3u/ipv6.m3u ./m3u/fanmingming.m3u || true
+          wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv || true
+          wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate || true
+          wget -O ./m3u/electriqube.m3u https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u || true
+          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u || true
+          wget -O ./m3u/letalp3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt || true
+          wget -O ./m3u/letalbestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt || true
+          wget -O ./m3u/letallthewind.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt || true
+          wget -O ./m3u/letalqttv.txt https://raw.githubusercontent.com/letallthewind/live/main/qttv.txt || true
+          wget -O ./m3u/letalsmart.txt https://raw.githubusercontent.com/letallthewind/live/main/smart.txt || true
+          wget -O ./m3u/letalubtv.txt https://raw.githubusercontent.com/letallthewind/live/main/ubtv.txt || true
+          wget -O ./m3u/52top/52topysp.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/ysp.m3u || true
+          wget -O ./m3u/52top/52topbeesport.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/beesport.m3u || true
+          wget -O ./m3u/52top/52toptptv_proxy.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/tptv_proxy.m3u || true
+          wget -O ./m3u/52top/52topsxg.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/sxg.m3u || true
+          wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
+          wget -O ./m3u/MuZu.html https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html || true
+          wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
+          
+          wget -O ./m3u/fanmingming.m3u https://live.fanmingming.com/tv/m3u/ipv6.m3u || true
 
       - name: Download Live Sources
         run: |
-          download_or_skip https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki ./m3u/Kiki.m3u || true
+
+          wget -O ./m3u/Kiki.m3u https://raw.githubusercontent.com/kiki4177/iptv/main/Kiki || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/Kiki.m3u         
-          download_or_skip http://xg.52sw.top:5000/4gtv.m3u ./m3u/52top/4gtv.m3u || true
+          wget -O ./m3u/52top/4gtv.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/4gtv.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u                    
-          download_or_skip http://xg.52sw.top:5000/itv_proxy.m3u ./m3u/52top/itv_proxy.m3u || true
+          wget -O ./m3u/52top/itv_proxy.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/itv_proxy.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/itv_proxy.m3u          
-          download_or_skip http://xg.52sw.top:5000/mytvsuper.m3u ./m3u/52top/mytvsuper.m3u || true
+          wget -O ./m3u/52top/mytvsuper.m3u https://noisy-nikoletta-jamin-9f6d6e7b.koyeb.app/mytvsuper.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/mytvsuper.m3u
-          download_or_skip https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 ./m3u/mewatchsg.m3u8 || true
+          wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/mewatchsg.m3u8
                    
           # tw
-          download_or_skip https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u ./m3u/tw.m3u || true
+          wget -O ./m3u/tw.m3u https://raw.githubusercontent.com/iptv-org/iptv/master/streams/tw.m3u || true
           sed -i 's/#EXTINF:-1/#EXTINF:-1 group-title="TW"/g; /^\s*$/d' ./m3u/tw.m3u
 
           # cn
-          download_or_skip https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u ./m3u/cqyx.m3u || true
-          download_or_skip https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u ./m3u/sxg.m3u || true
+          wget -O ./m3u/cqyx.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/cqyx.m3u || true
+          wget -O ./m3u/sxg.m3u https://raw.githubusercontent.com/Ftindy/IPTV-URL/main/sxg.m3u || true
           sed -i '/#EXTM3U/d' ./m3u/cqyx.m3u ./m3u/sxg.m3u 
           # cat ./m3u/cqyx.m3u ./m3u/sxg.m3u | tee ./m3u/iptv-org.m3u >/dev/null
           # sed -i '/^\s*$/d' ./m3u/iptv-org.m3u
 
       - name: Download Program Guide
         run: |
-          download_or_skip https://cutt.ly/FreeviewMY-EPG-1 ./EPG/My.xml || true
-          download_or_skip https://cutt.ly/FreeviewMY-EPG-2 ./EPG/Astro.xml || true
-          download_or_skip https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml ./EPG/SG.xml || true
+          wget -O ./EPG/My.xml https://cutt.ly/FreeviewMY-EPG-1 || true
+          wget -O ./EPG/Astro.xml https://cutt.ly/FreeviewMY-EPG-2 || true
+          wget -O ./EPG/SG.xml https://raw.githubusercontent.com/AqFad2811/epg/main/singapore.xml || true
           wget 'https://assets.livednow.com/epg.xml' \
-          --timeout=10 \
           --header='Upgrade-Insecure-Requests: 1' \
           --header='User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36' \
           --header='sec-ch-ua: "Not/A)Brand";v="8", "Chromium";v="126", "Google Chrome";v="126"' \
           --header='sec-ch-ua-mobile: ?0' \
           --header='sec-ch-ua-platform: "Windows"' \
-          -O ./EPG/CHN.xml || echo "Skipping CHN.xml due to download failure"
+          -O ./EPG/CHN.xml || true
           echo "EPG Auto Update in ${{ steps.date.outputs.date }}" > README.md
 
       - name: Setup Python Environment
