--- a/.github/workflows/Master.yml
+++ b/.github/workflows/Master.yml
@@ -22,7 +22,7 @@ jobs:
           wget -O ./m3u/aseanic.m3u https://raw.githubusercontent.com/aseanic/aseanic.github.io/main/iptv || true
           wget -O ./m3u/mystery75.m3u https://raw.githubusercontent.com/mystery75/streaming/app/tivimate || true
           wget -O ./m3u/electriqube.m3u https://raw.githubusercontent.com/electriqube/LiveTV/main/LiveTV.m3u || true
-          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u || true
+          
           wget -O ./m3u/letalp3p.txt https://raw.githubusercontent.com/letallthewind/live/main/p3p.txt || true
           wget -O ./m3u/letalbestv.txt https://raw.githubusercontent.com/letallthewind/live/main/bestv.txt || true
           wget -O ./m3u/letallthewind.txt https://raw.githubusercontent.com/letallthewind/live/main/iptv.txt || true
@@ -36,7 +36,7 @@ jobs:
           wget -O ./m3u/my.m3u https://raw.githubusercontent.com/weareblahs/freeview/main/mytv_broadcasting.m3u8 || true
           wget -O ./m3u/MuZu.html https://raw.githubusercontent.com/imanawesome2010/MuZu/main/index.html || true
           wget -O ./m3u/FreeviewMY.m3u8 https://raw.githubusercontent.com/itszairi/FreeviewMY/main/FreeviewMY.m3u8 || true
-          
+          wget -O ./m3u/ssili126.m3u8 https://raw.githubusercontent.com/ssili126/tv/main/itvlist.m3u || true
           wget -O ./m3u/fanmingming.m3u https://live.fanmingming.com/tv/m3u/ipv6.m3u || true
 
       - name: Download Live Sources
@@ -48,8 +48,8 @@ jobs:
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/4gtv.m3u                    
           wget -O ./m3u/52top/itv_proxy.m3u http://95.179.139.113:5566/itv_proxy.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/itv_proxy.m3u          
-          wget -O ./m3u/52top/mytvsuper.m3u http://95.179.139.113:5566/mytvsuper.m3u || true
-          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/mytvsuper.m3u
+          wget -O ./m3u/xiaotan8.m3u https://raw.githubusercontent.com/xiaotan8/xiaotan8.github.io/main/mytvsuper.m3u || true
+          sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/xiaotan8.m3u
           wget -O ./m3u/52top/hami.m3u http://95.179.139.113:5566/hami.m3u || true
           sed -i '/#EXTM3U/d; /^\s*$/d' ./m3u/52top/hami.m3u
           wget -O ./m3u/mewatchsg.m3u8 https://raw.githubusercontent.com/samleong123/mewatchsg/main/mewatchsg_drm_wv_url.m3u8 || true
@@ -97,7 +97,7 @@ jobs:
       - name: Integrate Master Playlist
         run: |
           rm -f Master.m3u && touch Master.m3u
-          cat ./m3u/Kiki.m3u ./m3u/52top/itv_proxy.m3u ./m3u/52top/4gtv.m3u ./m3u/52top/mytvsuper.m3u >> Master.m3u
+          cat ./m3u/Kiki.m3u ./m3u/52top/itv_proxy.m3u ./m3u/52top/4gtv.m3u ./m3u/xiaotan8.m3u >> Master.m3u
           sed -i '1i #EXTM3U\n#EXTM3U x-tvg-url="https://raw.githubusercontent.com/Tina-062006/java/main/EPG/EPG.xml"' Master.m3u
 
       - name: Commit and Push Changes
